--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           host: 147.93.53.24
           username: root
-          key: ${{ secrets.VPS_SSH_KEY }}
+          key: ${{ secrets.VPS_SSH_KEY_esc }}
           port: 22
           script: |
             cd /root/chorbane-espoir-web-portal
