--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,8 @@ jobs:
           key: ${{ secrets.key_o2switcher }}
           port: 22
           script: |
-            cd /root/chorbane-espoir-web-portal
+            cd espoirsportifchorbane.com
             git pull origin main
             npm install
             npm run build
-            sudo cp -r dist/* /var/www/html/
+            sudo cp -r dist/* .
