--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,4 +32,4 @@ jobs:
         key: ${{ secrets.HOSTINGER_SSH_KEY }}
         port: 22
         source: "dist/*"
-        target: "/var/var/html/"
+        target: "/var/www/html/"
